# modulo01

./: .pre-commit-config.yaml  README.md  funcoes.py  lista_clientes.py  lista_mumero.py  pyproject.toml  valido.py
Semana01/: lista_clientes.py  lista_idades.py  relatorio_simples.py  valido.py  valores_vendas.py
Semana02/: dados.csv  filtro_ativos.py  ler_csv.py
